[package]
name = "replit-xray"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
reqwest = { version = "0.11.14", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
signal-hook = "0.3.15"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }


[build-dependencies]
reqwest = { version = "0.11.14", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zip = "0.6.4"
